add 2 way report, readme

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,7 +2,8 @@
 # {player} - Player name
 # {damage} - Damage amount
 # {cause} - Damage cause
-message: "&c{player} &fdealt &c{damage} &fdamage from &c{cause}"
+damageDealt: "&c{player} &fdealt &c{damage} &fdamage from &c{cause}"
+damageTook: "&c{player} &ftook &c{damage} &fdamage from &c{cause}"
 onlyPlayers: "&cOnly players can use this command!"
 command: "&6DamageTest {status}" 
 enabled: "activated"
